compiler/flux-typesystem/src/snapshots/flux_typesystem__check__tests__typecheck_sint32_int.snap
---
source: compiler/flux-typesystem/src/check.rs
expression: "check(sint!(32), int!())"
---
i32 <-> Int ✓
