compiler/flux-typesystem/src/snapshots/flux_typesystem__check__tests__typecheck_sint32_sint32.snap
---
source: compiler/flux-typesystem/src/check.rs
expression: "check(sint!(32), sint!(32))"
---
i32 <-> i32 ✓
