compiler/flux-typesystem/src/snapshots/flux_typesystem__check__tests__typecheck_sint32_uint32.snap
---
source: compiler/flux-typesystem/src/check.rs
expression: "check(sint!(32), uint!(32))"
---
[31m[E0003] Error:[0m type mismatch
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mfoo.flx:1:1[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m 
 [38;5;246m  ·[0m [31m│[0m 
 [38;5;246m  ·[0m [31m╰[0m[31m─[0m type mismatch between `i32` and `u32`
 [38;5;246m  ·[0m [34m│[0m 
 [38;5;246m  ·[0m [34m╰[0m[34m─[0m `i32`
 [38;5;246m  ·[0m [34m│[0m 
 [38;5;246m  ·[0m [34m╰[0m[34m─[0m `u32`
[38;5;246m───╯[0m

