compiler/flux-typesystem/src/snapshots/flux_typesystem__check__tests__typecheck_uint32_int.snap
---
source: compiler/flux-typesystem/src/check.rs
expression: "check(uint!(32), int!())"
---
u32 <-> Int ✓
