compiler/flux-typesystem/src/snapshots/flux_typesystem__check__tests__typecheck_uint32_uint32.snap
---
source: compiler/flux-typesystem/src/check.rs
expression: "check(uint!(32), uint!(32))"
---
u32 <-> u32 ✓
